2013-01-28  Tien-Ren Chen  <trchen@chromium.org>

        Fix disambiguation popup for new-style page scale
        https://bugs.webkit.org/show_bug.cgi?id=107391

        Reviewed by Adam Barth.

        This patch corrects various coordinate conversion for disambiguation
        popup for the new-style page scale mode.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):
        (WebKit::WebViewImpl::handleInputEvent):
        * tests/WebFrameTest.cpp:
        * tests/data/disambiguation_popup_page_scale.html: Added.

2013-01-28  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r141049.
        http://trac.webkit.org/changeset/141049
        https://bugs.webkit.org/show_bug.cgi?id=108151

        Caused some indexed tests to crash. (Requested by keishi on
        #webkit).

        * public/WebIDBCallbacks.h:
        (WebKit):
        * src/IDBCallbacksProxy.cpp:
        (WebKit::IDBCallbacksProxy::onUpgradeNeeded):
        * src/IDBCallbacksProxy.h:
        (IDBCallbacksProxy):
        * src/WebIDBCallbacksImpl.cpp:
        (WebKit::WebIDBCallbacksImpl::onSuccess):
        (WebKit::WebIDBCallbacksImpl::onUpgradeNeeded):
        * src/WebIDBCallbacksImpl.h:
        (WebIDBCallbacksImpl):
        * tests/IDBAbortOnCorruptTest.cpp:
        (WebCore::MockIDBCallbacks::onSuccess):
        * tests/IDBDatabaseBackendTest.cpp:

2013-01-28  Raman Kumar  <ramankk@chromium.org>

        Expose isRadioButton and isCheckbox API in chromium-webkit glue layer.
        https://bugs.webkit.org/show_bug.cgi?id=108031

        Reviewed by Adam Barth.

        In chromium, to know if an InputElement is radiobutton or a checkbox,
        we are checking for formControlType (a string comparision), which is
        very slow. Exposing these API to chromium will make them faster.

        * public/WebInputElement.h:
        (WebInputElement):
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::isRadioButton):