@@ -1,3 +1,13 @@
+2013-01-28  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        Re-enable WebFrameTest.DivScrollIntoEditableTest
+        https://bugs.webkit.org/show_bug.cgi?id=98558
+
+        Reviewed by Adam Barth.
+
+        * tests/WebFrameTest.cpp: Fixed several issues (onload script, the maximum scale factor, etc.) of WebFrameTest.DivScrollIntoEditableTest and enable it.
+        * tests/data/get_scale_for_zoom_into_editable_test.html: Moved the logic of onload script (which seems not to work) into WebFrameTest.cpp.
+
 2013-01-28  Tien-Ren Chen  <trchen@chromium.org>
 
         Fix disambiguation popup for new-style page scale
